💄  Fix dark mode tab colors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1241,5 +1241,12 @@ body {
 .select-auto-lg{user-select:auto;}
 
 
+/* TAB */
+.arc--tab-btn {
+  background: var(--g1);
+  color: var(--text-color);
+}
+
+
 }
 
